# microsite-template

./: .common.mk  .console-colors.mk  .gitignore  .website.mk  CODEOWNERS  GITHUB_PAGES.md  Makefile  README-instructions.md  README-template.md  README.md  check-external-links.sh  create-microsite.sh  finish-microsite.sh  publish-website.sh  pyproject.toml  update-main.sh
.github/ISSUE_TEMPLATE/: bug_report.yaml  code_change.yaml  docs_website_change.yaml  generic_issue.yaml  question.yaml
.github/PULL_REQUEST_TEMPLATE/: docs_website_pr.md  general_code_pr.md
.github/scripts/: stamp_changelog.py
.github/workflows/: changelog.yml  ci.yml  collect_metrics.yaml
docs/: _config.yml  about.markdown  contributing.markdown  example_redirect.markdown  index.markdown  second_page.markdown
docs/_includes/: header_buttons_custom.html
docs/_includes/js/: custom.js
docs/_layouts/: abs_redirect.html  default.html  redirect.html
docs/_sass/custom/: custom.scss
docs/_sass/support/: _variables.scss
docs/nested/: nested.markdown  nested_child.markdown
